// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityTableToolbar DOM should render correctly - no data 1`] = `
<PrimaryToolbar
  actionsConfig={null}
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "items": Array [
        Object {
          "filterValues": Object {
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    <Skeleton
      isDark={false}
      size="lg"
    />
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with children 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "items": Array [
        Object {
          "filterValues": Object {
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with custom activeFilters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
        Object {
          "category": "Some",
          "chips": Array [
            Object {
              "name": "something",
            },
            Object {
              "name": "something 2",
            },
          ],
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "items": Array [
        Object {
          "filterValues": Object {
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "filterValues": Object {
            "className": "ins-c-inventory__tags-filter",
            "filterBy": "",
            "items": Array [
              Object {
                "className": "ins-c-inventory__tags-tail",
                "isDisabled": true,
                "label": <span>
                   
                  <Spinner
                    size="md"
                  />
                   
                </span>,
              },
            ],
            "onChange": [Function],
            "onFilter": [Function],
            "selected": Object {},
          },
          "label": "Tags",
          "placeholder": "Filter system by tag",
          "type": "group",
          "value": "tags",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with custom filters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "items": Array [
        Object {
          "filterValues": Object {
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "label": "Filter by text",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with default filters 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "items": Array [
        Object {
          "filterValues": Object {
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "fresh",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with default tag filter 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "items": Array [
        Object {
          "filterValues": Object {
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with items 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar ins-c-inventory__table--toolbar-has-items"
  filters={Array []}
  pagination={
    Object {
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with tags 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "items": Array [
        Object {
          "filterValues": Object {
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
        Object {
          "filterValues": Object {
            "className": "ins-c-inventory__tags-filter",
            "filterBy": "",
            "items": Array [
              Object {
                "className": "ins-c-inventory__tags-tail",
                "isDisabled": true,
                "label": <span>
                   
                  <Spinner
                    size="md"
                  />
                   
                </span>,
              },
            ],
            "onChange": [Function],
            "onFilter": [Function],
            "selected": Object {},
          },
          "label": "Tags",
          "placeholder": "Filter system by tag",
          "type": "group",
          "value": "tags",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "itemCount": undefined,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": undefined,
      "perPage": undefined,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;

exports[`EntityTableToolbar DOM should render correctly - with tags 2`] = `
<TagsModal
  fetchAllTags={[Function]}
  fetchTagsForSystem={[Function]}
  filters={
    Array [
      Object {},
    ]
  }
  loaded={false}
  onApply={[Function]}
  onToggleTagModal={[Function]}
  pagination={
    Object {
      "page": 1,
      "perPage": 10,
    }
  }
  showTagDialog={false}
  tags={
    Array [
      Object {
        "key": "some key",
        "namespace": "something",
        "value": "some value",
      },
      Object {
        "key": "some key",
        "namespace": "something",
        "value": null,
      },
      Object {
        "key": "some key",
        "namespace": null,
        "value": null,
      },
    ]
  }
  tagsCount={0}
/>
`;

exports[`EntityTableToolbar DOM should render correctly 1`] = `
<PrimaryToolbar
  activeFiltersConfig={
    Object {
      "filters": Array [
        Object {
          "category": "Status",
          "chips": Array [
            Object {
              "name": "Fresh",
              "value": "fresh",
            },
            Object {
              "name": "Stale",
              "value": "stale",
            },
          ],
          "type": "staleness",
        },
        Object {
          "category": "Source",
          "chips": Array [
            Object {
              "name": "Insights",
              "value": "insights",
            },
          ],
          "type": "registered_with",
        },
      ],
      "onDelete": [Function],
    }
  }
  className="ins-c-inventory__table--toolbar "
  filterConfig={
    Object {
      "items": Array [
        Object {
          "filterValues": Object {
            "onChange": [Function],
            "placeholder": "Filter by name",
            "value": "",
          },
          "label": "Name",
          "value": "name-filter",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Fresh",
                "value": "fresh",
              },
              Object {
                "label": "Stale",
                "value": "stale",
              },
              Object {
                "label": "Stale warning",
                "value": "stale_warning",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "fresh",
              "stale",
            ],
          },
          "label": "Status",
          "type": "checkbox",
          "value": "stale-status",
        },
        Object {
          "filterValues": Object {
            "items": Array [
              Object {
                "label": "Insights",
                "value": "insights",
              },
            ],
            "onChange": [Function],
            "value": Array [
              "insights",
            ],
          },
          "label": "Source",
          "type": "checkbox",
          "value": "source-registered-with",
        },
      ],
    }
  }
  filters={Array []}
  pagination={
    Object {
      "itemCount": 500,
      "onPerPageSelect": [Function],
      "onSetPage": [Function],
      "page": 1,
      "perPage": 50,
    }
  }
  toggleIsExpanded={[Function]}
/>
`;
